data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2219.wast
;; 9. **Dynamic Stack Manipulation with Complex Operand Types**:    - Use `br_table` in a loop with complex operand types and a dynamic stack configuration. Ensure the engine correctly evaluates the current stack and performs jumps accurately, avoiding loops stuck in improper continuous stack evaluations.

(assert_invalid
 (module
  (func (result i32)
   (loop (result i32)
    (block (result i32)
     (i32.const 0)
     (i32.const 1)
     (i32.add)
     (br_table 0)
    )
    (br 1)
   )
  )
 )
 "type mismatch"
)